# index.js
@@ -3,6 +3,8 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger/swagger.json');
 
 const UserHandler = require('./src/handler/userhandler');
+const itemHandler = require('./src/handler/itemhandler');
+
 
 const app = express();
 app.use(express.json());
@@ -14,6 +16,13 @@ app.get('/users/:email', (req, res) => userHandler.getUserByEmail(req, res));
 app.put('/users/:email', (req, res) => userHandler.updateUser(req, res));
 app.delete('/users/:email', (req, res) => userHandler.deleteUser(req, res));
 app.patch('/users/:email/profile-picture', (req, res) => userHandler.updateUserProfilePicture(req, res));
+
+//Route Item
+app.get('/items', (req, res) => itemHandler.getAllItems(req, res));
+app.get('/items/:id', (req, res) => itemHandler.getItemById(req, res));
+app.put('/items/:id', (req, res) => itemHandler.updateItem(req, res));
+app.delete('/items/:id', (req, res) => itemHandler.deleteItem(req, res));
+app.patch('/items/:id/media', (req, res) => itemHandler.uploadMedia(req, res));
 
 
 //Setup server
